fixed :where(button,input,select,textarea) outlines to existing within element borders instead of outside of it (they were clipping when the element was at full width of its parent)

--- a/app/static/styles/lilycat.normalize.css
+++ b/app/static/styles/lilycat.normalize.css
@@ -61,6 +61,7 @@ a {
   color: var(--clr-content);
   height: 45px;
   outline: solid 1px var(--clr-content);
+  outline-offset: -1px;
   padding: 15px;
 
   &:is(button, select, [type="button"], [type="submit"], [type="reset"]) {
